# bladeplay

./: .gitignore  CLAUDE.md  Cargo.toml  HOT_RELOAD.md  README.md
.github/workflows/: Android.yaml
data/: cube.glb  cylinder.glb  env_suns.hdr  env_suns_97.hdr  plane.glb  sphere.glb  star.glb  torus.glb
interact-logic/: Cargo.toml
interact-logic/src/: lib.rs
src/: game.rs  hot_logic.rs  hud.rs  main.rs  picking.rs  scene.rs
