[workspace]
members = [".", "interact-logic"]
resolver = "2"

[package]
name = "interact"
version = "0.1.0"
edition = "2024"

[dependencies]
interact-logic = { path = "interact-logic" }
libloading = "0.8"
blade-asset = { git = "https://github.com/nergnezor/blade" }
blade-engine = { git = "https://github.com/nergnezor/blade" }
blade-helpers = { git = "https://github.com/nergnezor/blade" }
blade-render = { git = "https://github.com/nergnezor/blade" }
egui = "0.34"
egui-winit = { version = "0.34", default-features = false, features = ["links"] }
glam = { version = "0.30", features = ["mint"] }
log = "0.4"
env_logger = "0.11"
winit = "0.30"
libc = "0.2"

[patch."https://github.com/nergnezor/blade"]
blade-asset    = { path = "../blade/src/blade-asset" }
blade-egui     = { path = "../blade/src/blade-egui" }
blade-engine   = { path = "../blade/src/blade-engine" }
blade-graphics = { path = "../blade/src/blade-graphics" }
blade-helpers  = { path = "../blade/src/blade-helpers" }
blade-macros   = { path = "../blade/src/blade-macros" }
blade-particle = { path = "../blade/src/blade-particle" }
blade-render   = { path = "../blade/src/blade-render" }
blade-util     = { path = "../blade/src/blade-util" }
